<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivityFragment">

    <Button
        android:id="@+id/bt_showbyrating"
        android:layout_width="232dp"
        android:layout_height="61dp"
        android:layout_marginStart="82dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="97dp"
        android:text="@string/showlistbyrating"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_showbyyear" />

    <Button
        android:id="@+id/bt_showbyyear"
        android:layout_width="232dp"
        android:layout_height="61dp"
        android:layout_marginStart="82dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="97dp"
        android:text="@string/showlistbyyear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_deletemovie" />

    <Button
        android:id="@+id/bt_addmovie"
        android:layout_width="232dp"
        android:layout_height="61dp"
        android:layout_marginStart="82dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="97dp"
        android:text="@string/addmovie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_edit"
        android:layout_width="232dp"
        android:layout_height="61dp"
        android:layout_marginStart="82dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="97dp"
        android:text="@string/edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_addmovie" />

    <Button
        android:id="@+id/bt_deletemovie"
        android:layout_width="232dp"
        android:layout_height="61dp"
        android:layout_marginStart="82dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="97dp"
        android:text="@string/deletemovie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_edit" />
</androidx.constraintlayout.widget.ConstraintLayout>