<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowListByYear">

    <TextView
        android:id="@+id/tv_static_mby"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="178dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="175dp"
        android:layout_marginBottom="683dp"
        android:text="@string/tv_static_mby"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_static_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="79dp"
        android:layout_marginEnd="351dp"
        android:layout_marginBottom="628dp"
        android:text="@string/tv_static_title"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="233dp"
        android:layout_marginBottom="624dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tv_static_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_static_mby"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tv_static_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="335dp"
        android:layout_marginBottom="558dp"
        android:text="@string/tv_static_description"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.025"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_static_title"
        app:layout_constraintVertical_bias="0.8" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="377dp"
        android:layout_height="94dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="439dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_static_description" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="335dp"
        android:layout_marginBottom="366dp"
        android:text="@string/tv_static_genre"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_description" />

    <TextView
        android:id="@+id/tv_genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="67dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="268dp"
        android:layout_marginBottom="363dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/tv_description"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tv_static_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="331dp"
        android:layout_marginBottom="308dp"
        android:text="@string/tv_static_rating"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/tv_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="117dp"
        android:layout_marginEnd="267dp"
        android:layout_marginBottom="302dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_static_rating"
        app:layout_constraintTop_toBottomOf="@+id/tv_description"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tv_static_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="344dp"
        android:layout_marginBottom="246dp"
        android:text="@string/tv_static_year"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_static_rating"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tv_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="47dp"
        android:layout_marginTop="173dp"
        android:layout_marginEnd="237dp"
        android:layout_marginBottom="246dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_static_year"
        app:layout_constraintTop_toBottomOf="@+id/tv_description" />

    <TextView
        android:id="@+id/tv_static_imdb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="335dp"
        android:layout_marginBottom="181dp"
        android:text="@string/tv_static_imdb"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_static_year" />

    <TextView
        android:id="@+id/tv_imdb"
        android:layout_width="376dp"
        android:layout_height="30dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="23dp"
        app:layout_constraintBottom_toTopOf="@+id/iv_previous"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_static_imdb" />

    <ImageView
        android:id="@+id/iv_first"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="303dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/first"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_imdb"
        app:layout_constraintVertical_bias="0.478"
        app:srcCompat="@drawable/first" />

    <ImageView
        android:id="@+id/iv_previous"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="268dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/previous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/iv_first"
        app:layout_constraintTop_toBottomOf="@+id/tv_imdb"
        app:srcCompat="@drawable/previous" />

    <ImageView
        android:id="@+id/iv_next"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="28dp"
        android:contentDescription="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.97"
        app:layout_constraintStart_toEndOf="@+id/iv_previous"
        app:layout_constraintTop_toBottomOf="@+id/tv_imdb"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/next" />

    <ImageView
        android:id="@+id/iv_last"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/last"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.979"
        app:layout_constraintStart_toEndOf="@+id/iv_next"
        app:layout_constraintTop_toBottomOf="@+id/tv_imdb"
        app:layout_constraintVertical_bias="0.538"
        app:srcCompat="@drawable/last" />

    <Button
        android:id="@+id/bt_finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="36dp"
        android:text="@string/finish"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/iv_next"
        app:layout_constraintHorizontal_bias="0.377"
        app:layout_constraintStart_toEndOf="@+id/iv_previous"
        app:layout_constraintTop_toBottomOf="@+id/tv_imdb"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>