<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.inclass10_main.MainActivity">

    <EditText
        android:id="@+id/et_name"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="98dp"
        android:layout_height="45dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="11dp"
        android:text="@string/name"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/et_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="178dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="217dp"
        android:text="@string/description"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name"
        app:layout_constraintVertical_bias="0.016" />

    <EditText
        android:id="@+id/et_description"
        android:layout_width="377dp"
        android:layout_height="131dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="18dp"
        android:ems="10"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_description"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_genre"
        android:layout_width="126dp"
        android:layout_height="37dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="265dp"
        android:text="@string/genre"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_description"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/sp_genrelist"
        android:layout_width="226dp"
        android:layout_height="37dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tv_genre"
        app:layout_constraintTop_toBottomOf="@+id/et_description"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_rating"
        android:layout_width="126dp"
        android:layout_height="37dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="265dp"
        android:text="@string/rating"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_genre"
        app:layout_constraintVertical_bias="0.108" />

    <SeekBar
        android:id="@+id/sb_rating"
        android:layout_width="226dp"
        android:layout_height="37dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:max="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tv_rating"
        app:layout_constraintTop_toBottomOf="@+id/sp_genrelist"
        app:layout_constraintVertical_bias="0.116" />

    <TextView
        android:id="@+id/tv_year"
        android:layout_width="126dp"
        android:layout_height="37dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="263dp"
        android:text="@string/year"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_rating"
        app:layout_constraintVertical_bias="0.058" />

    <EditText
        android:id="@+id/et_year"
        android:layout_width="229dp"
        android:layout_height="50dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="27dp"
        android:ems="10"
        android:inputType="number"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tv_year"
        app:layout_constraintTop_toBottomOf="@+id/sb_rating"
        app:layout_constraintVertical_bias="0.045" />

    <TextView
        android:id="@+id/tv_imdb"
        android:layout_width="121dp"
        android:layout_height="37dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="268dp"
        android:text="@string/imdb"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_year"
        app:layout_constraintVertical_bias="0.067" />

    <EditText
        android:id="@+id/et_imdb"
        android:layout_width="229dp"
        android:layout_height="50dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toEndOf="@+id/tv_imdb"
        app:layout_constraintTop_toBottomOf="@+id/et_year"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/bt_addmovie"
        android:layout_width="279dp"
        android:layout_height="63dp"
        android:layout_marginStart="69dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="64dp"
        android:text="@string/savechanges"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_imdb"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_progress"
        android:layout_width="31dp"
        android:layout_height="20dp"
        app:layout_constraintBottom_toTopOf="@+id/et_year"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.307"
        app:layout_constraintStart_toEndOf="@+id/sb_rating"
        app:layout_constraintTop_toBottomOf="@+id/sp_genrelist"
        app:layout_constraintVertical_bias="0.58" />
</androidx.constraintlayout.widget.ConstraintLayout>